--- a/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
+++ b/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
@@ -2,11 +2,13 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>LagoVista.UserAdmin.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1276-beta1811" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1276-beta1811" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1276-beta1811" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1353-beta1658" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1353-beta1658" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1353-beta1658" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
