--- a/src/LagoVista.UserAdmin.Models/LagoVista.UserAdmin.Models.csproj
+++ b/src/LagoVista.UserAdmin.Models/LagoVista.UserAdmin.Models.csproj
@@ -3,12 +3,12 @@
     <TargetFramework>netstandard1.2</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>LagoVista.UserAdmin.Models.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>LagoVista.Core.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1353-beta1658" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1353-beta1658" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1353-beta1658" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1364-beta0547" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1364-beta0547" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1364-beta0547" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
