--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <NetStandardImplicitPackageVersion>2.0.3</NetStandardImplicitPackageVersion>
+    <TargetFramework>net5.0</TargetFramework>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1378-beta0436" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1433-beta1816" />
     <PackageReference Include="SendGrid" Version="9.22.0" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
-    <PackageReference Include="Twilio" Version="5.29.1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="MailKit" Version="2.6.0" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.1378-beta0436" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1378-beta0436" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
+    <PackageReference Include="Twilio" Version="5.58.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="MailKit" Version="2.11.1" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1433-beta1816" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1433-beta1816" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
   <ItemGroup>
