--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -4,14 +4,15 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1434.0352" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1939.1003" />
     <PackageReference Include="SendGrid" Version="9.22.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Twilio" Version="5.58.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="MailKit" Version="2.11.1" />
-    <PackageReference Include="LagoVista.Core" Version="2.1.1434.0352" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1434.0352" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.1946.1108" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="5.0.16" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1946.1108" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
   <ItemGroup>
