--- a/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
+++ b/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
@@ -8,11 +8,11 @@
     <None Remove="Account\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.CloudStorage" Version="2.1.1434.0352" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1434.0352" />
-    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.14.0" />
+    <PackageReference Include="LagoVista.CloudStorage" Version="3.0.1958.0509" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1958.0509" />
+    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.30.1" />
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.18.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
