--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -4,16 +4,17 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1958.0509" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1959.1339" />
+    <PackageReference Include="Moq" Version="4.18.2" />
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
-    <PackageReference Include="Twilio" Version="5.58.0" />
+    <PackageReference Include="Twilio" Version="5.80.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="MailKit" Version="2.11.1" />
-    <PackageReference Include="LagoVista.Core" Version="3.0.1958.0509" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.1959.1339" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="6.0.9" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1958.0509" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1959.1339" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
