--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -4,14 +4,16 @@
     <OutputType>Library</OutputType>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.1963.1145" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.2048.0403" />
     <PackageReference Include="SendGrid" Version="9.28.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Twilio" Version="5.80.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="LagoVista.Core" Version="3.0.1963.1145" />
+    <PackageReference Include="LagoVista.Core" Version="3.0.2048.0403" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="6.0.9" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.1963.1145" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.2048.0403" />
+    <PackageReference Include="prometheus-net" Version="6.0.0" />
+
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
