--- a/src/LagoVista.AspNetCore.Identity/Package.nuspec
+++ b/src/LagoVista.AspNetCore.Identity/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>LagoVista.AspNetCore.Identity</id>
     <title>LagoVista ASP.NET Core Identity Provider</title>
-    <version>3.0.1963.1145</version>
+    <version>3.0.2048.0648</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,19 +14,20 @@
     <copyright>Copyright Software Logistics - 2022</copyright>
     <tags>HomeAutomation IoT</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 10/1/2022 3:45:22 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="net6.0">
-        <dependency id="LagoVista.IoT.Logging" version="3.0.1963.1145" />
+        <dependency id="LagoVista.IoT.Logging" version="3.0.2048.0520" />
         <dependency id="SendGrid" version="9.28.1" />
         <dependency id="System.ComponentModel.Annotations" version="5.0.0" />
         <dependency id="Twilio" version="5.80.0" />
         <dependency id="Newtonsoft.Json" version="13.0.1" />
-        <dependency id="LagoVista.Core" version="3.0.1963.1145" />
+        <dependency id="LagoVista.Core" version="3.0.2048.0520" />
         <dependency id="Microsoft.AspNetCore.Authentication.Twitter" version="6.0.9" />
-        <dependency id="LagoVista.Core.Authentication" version="3.0.1963.1145" />
-        <dependency id="LagoVista.UserAdmin" version="3.0.1963.1145" />
+        <dependency id="LagoVista.Core.Authentication" version="3.0.2048.0520" />
+        <dependency id="prometheus-net" version="6.0.0" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.2048.0648" />
       </group>
     </dependencies>
   </metadata>
