--- a/src/LagoVista.IoT.ProductStore/Package.nuspec
+++ b/src/LagoVista.IoT.ProductStore/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>LagoVista.IoT.ProductStore</id>
     <title>LagoVista ASP.NET Core Identity Provider</title>
-    <version>3.0.1963.1145</version>
+    <version>3.0.2048.0648</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,7 +14,7 @@
     <copyright>Copyright Software Logistics - 2022</copyright>
     <tags>HomeAutomation IoT</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 10/1/2022 3:45:22 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="netstandard2.1" />
