--- a/src/LagoVista.UserAdmin.Models/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Models/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Models</id>
-    <version>3.0.1963.1145</version>
+    <version>3.0.2048.0648</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista User Models</title>
@@ -14,19 +14,19 @@
     <copyright>Copyright Software Logistics - 2022</copyright>
     <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 10/1/2022 3:45:22 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
-      <group targetFramework="netstandard1.2">
-        <dependency id="LagoVista.Core" version="3.0.1963.1145" />
-        <dependency id="LagoVista.IoT.Logging" version="3.0.1963.1145" />
-        <dependency id="LagoVista.Core.Authentication" version="3.0.1963.1145" />
+      <group targetFramework="netstandard2.1">
+        <dependency id="LagoVista.Core" version="3.0.2048.0520" />
+        <dependency id="LagoVista.IoT.Logging" version="3.0.2048.0520" />
+        <dependency id="LagoVista.Core.Authentication" version="3.0.2048.0520" />
       </group>
     </dependencies>
   </metadata>
   <files>
     <file src="LagoVistaIcon.png" target="LagoVistaIcon.png" />
-    <file src="bin\release\netstandard1.2\LagoVista.UserAdmin.Models.dll" target="lib\netstandard1.2\LagoVista.UserAdmin.Models.dll" />
-    <file src="bin\release\netstandard1.2\LagoVista.UserAdmin.Models.pdb" target="lib\netstandard1.2\LagoVista.UserAdmin.Models.pdb" />
+    <file src="bin\release\netstandard2.1\LagoVista.UserAdmin.Models.dll" target="lib\netstandard2.1\LagoVista.UserAdmin.Models.dll" />
+    <file src="bin\release\netstandard2.1\LagoVista.UserAdmin.Models.pdb" target="lib\netstandard2.1\LagoVista.UserAdmin.Models.pdb" />
   </files>
 </package>
