--- a/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos.RDBMS</id>
-    <version>3.0.1963.1145</version>
+    <version>3.0.2048.0648</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista Relational DB Repo for Orgs and Users</title>
@@ -14,18 +14,15 @@
     <copyright>Copyright Software Logistics - 2022</copyright>
     <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 10/1/2022 3:45:22 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="NET6.0">
-        <dependency id="LagoVista.Core" version="3.0.1963.1145" />
+        <dependency id="Microsoft.Data.SqlClient" version="5.0.0" />
         <dependency id="Microsoft.EntityFrameworkCore.Design" version="6.0.9" />
         <dependency id="Microsoft.EntityFrameworkCore.SqlServer" version="6.0.9" />
         <dependency id="Microsoft.Extensions.DependencyInjection" version="6.0.0" />
-        <dependency id="System.Data.SqlClient" version="4.8.3" />
-        <dependency id="LagoVista.IoT.Logging" version="3.0.1963.1145" />
-        <dependency id="Newtonsoft.Json" version="13.0.1" />
-        <dependency id="LagoVista.UserAdmin" version="3.0.1963.1145" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.2048.0648" />
       </group>
     </dependencies>
   </metadata>
