--- a/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
+++ b/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
@@ -1,11 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>LagoVista.UserAdmin.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.2487.1013" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.2559.0835" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="RingCentral.Net" Version="6.1.3" />
   </ItemGroup>
   <ItemGroup>
