--- a/tests/LagoVista.UserAdmin.Tests/LagoVista.UserAdmin.Tests.csproj
+++ b/tests/LagoVista.UserAdmin.Tests/LagoVista.UserAdmin.Tests.csproj
@@ -3,13 +3,14 @@
     <TargetFramework>net6.0</TargetFramework>
     <DebugType>portable</DebugType>
     <AssemblyName>LagoVista.UserAdmin.Tests</AssemblyName>
+    <Nullable>disable</Nullable>
     <PackageId>LagoVista.UserAdmin.Tests</PackageId>
     <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     <RootNamespace>LagoVista.UserAdmin.Tests</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.10.4" />
-    <!--<PackageReference Include="LagoVista.IoT.SecurityManager" Version="3.0.2547.1221" />-->
+    <!--<PackageReference Include="LagoVista.IoT.SecurityManager" Version="3.0.2666.0842" />-->
     <PackageReference Include="Microsoft.Graph" Version="5.44.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="Moq" Version="4.18.2" />
@@ -20,6 +21,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\LagoVista.AspNetCore.Identity\LagoVista.AspNetCore.Identity.csproj" />
+    <ProjectReference Include="..\..\src\LagoVista.UserAdmin.Repos.RDBMS\LagoVista.UserAdmin.Repos.RDBMS.csproj" />
     <ProjectReference Include="..\..\src\LagoVista.UserAdmin.Repos\LagoVista.UserAdmin.Repos.csproj" />
     <ProjectReference Include="..\..\src\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
   </ItemGroup>
