--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -5,12 +5,13 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Fido2" Version="4.0.0" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.3169.0728" />
+    <PackageReference Include="Fido2.AspNet" Version="4.0.0" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="3.0.3177.0518" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Twilio" Version="7.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="9.0.9" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.3169.0728" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="3.0.3177.0518" />
     <PackageReference Include="prometheus-net" Version="8.2.1" />
 
   </ItemGroup>
